--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 
   "scripts": {
     "server": "nodemon server.js",
-    "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
